# Matrix-direct-product-method

./: CMakeLists.txt  README.md  optimize.cpp  optimize.h
